syntax = "proto3";

option csharp_namespace = "ResumeGenerator.TelegramAdapter.Grpc.Server.Generated";

import "google/protobuf/empty.proto";

package telegram_adapter;

service TelegramAdapter {
  rpc SendResume (SendResumeRequest) returns (google.protobuf.Empty);
  rpc SendResumeFailedMessage (SendResumeFailedMessageRequest) returns (google.protobuf.Empty);
}

message SendResumeRequest {
  string userID = 1;
  string resumeID = 2;
  string resumeTitle = 3;
}

message SendResumeFailedMessageRequest {
  string userID = 1;
}